--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,70 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+*{
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+:root{
+
+    /*colors*/
+    --body-color:#EFEFEF;
+    --sidebar-color:#FFF;
+    --primary-color:#695CFE;
+    --primary-color-light:#F6F5FF;
+    --toggle-color:#DDD;
+    --text-color:#707070;
+    --card-color:#f3f3f3;
+
+    /*transations*/
+    --tran-02:all 0.2s ease;
+    --tran-03:all 0.3s ease;
+    --tran-04:all 0.4s ease;
+    --tran-05:all 0.5s ease; 
+
+    /* Font Weights */
+    --fw-extra-light: 200;
+    --fw-light: 300;
+    --fw-regular: 400;
+    --fw-semi-bold: 500;
+    --fw-bold: 700;
+
+    /* Font Sizes */
+    --fs-100: 0.8125rem;
+    --fs-200: 0.875rem;
+    --fs-300: 0.9375rem;
+    --fs-400: 1rem;
+    --fs-450: 1.25rem;
+    --fs-500: 1.5rem;
+    --fs-700: 2.5rem;
+    --fs-900: 3.5rem;
+
+    /* sizes */
+    --size-100: 0.25rem;
+    --size-200: 0.5rem;
+    --size-300: 0.75rem;
+    --size-400: 1rem;
+    --size-500: 1.1rem;
+    --size-600: 2rem;
+    --size-650: 2.5rem;
+    --size-700: 3rem;
+    --size-800: 4rem;
+    --size-850: 4.5rem;
+    --size-900: 5rem;
+    --size-1000: 7rem;
+}
+body.dark{
+    --body-color:#18191A;
+    --sidebar-color:#242526;
+    --primary-color:#3A3B3C;
+    --primary-color-light:#3A3B3C;
+    --toggle-color:#FFF;
+    --text-color:#CCC;
+    --card-color:#3A3B3C
+}
+body{
+    height: 100%;
+    background-color: var(--body-color);
+    transition: var(--tran-02);
+    
+}
